@@ -97,8 +97,9 @@ enum {
 	ns_statscounter_usedstale = 62,
 
 	ns_statscounter_prefetch = 63,
+	ns_statscounter_keytagopt = 64,
 
-	ns_statscounter_max = 64
+	ns_statscounter_max = 65
 };
 
 void
